# bridge

./: .gitignore  Cargo.toml  README.md  build.rs  cargo-sources.json  flatpak-build.sh  generate-cargo-sources.sh  io.github.arulan.Bridge-dev.json  io.github.arulan.Bridge.json  io.github.arulan.Dashboard-dev.json  io.github.arulan.Dashboard.json  meson.build
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
data/: io.github.arulan.Bridge.desktop  io.github.arulan.Bridge.gschema.xml  io.github.arulan.Bridge.metainfo.xml  io.github.arulan.Dashboard.desktop  io.github.arulan.Dashboard.gschema.xml  io.github.arulan.Dashboard.metainfo.xml  meson.build  style.css
data/icons/: meson.build
data/resources/: bridge.gresource.xml  dashboard.gresource.xml  meson.build  style.css
data/resources/ui/: shortcuts.ui  window.ui
data/ui/: window.ui
src/: application.rs  audio.rs  background.rs  config.rs  dialogs.rs  main.rs  meson.build  shortcuts.rs  util.rs  volume.rs  window.rs  wp.rs
src/audio/: backend.rs  hw_sink.rs  level_meter.rs  mixer.rs  pw_config.rs  pw_connection.rs  routing.rs  test_tone.rs
src/audio/pw_connection/: ffi.rs  meter.rs  pod.rs
src/dialogs/: add_rule.rs  preferences.rs  quick_switch.rs  setup.rs  surround.rs
src/window/: mod.rs  quick_switch.rs  routing_tile.rs  stream_list.rs  surround_mode.rs
src/wp/: ffi.rs
