[package]
name = "bridge"
version = "0.4.0"
edition = "2024"
rust-version = "1.96"
license = "GPL-3.0-or-later"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_8"] }
glib = "0.22"
gio = "0.22"
pipewire = { version = "0.10", features = ["v0_3_77"] }
async-channel = "2"
