subdir('resources')
subdir('icons')

install_data(
  'io.github.arulan.Dashboard.desktop',
  install_dir: datadir / 'applications',
)

install_data(
  'io.github.arulan.Dashboard.gschema.xml',
  install_dir: datadir / 'glib-2.0' / 'schemas',
)

install_data(
  'io.github.arulan.Dashboard.metainfo.xml',
  install_dir: datadir / 'metainfo',
)
