subdir('resources')
subdir('icons')

install_data(
  'io.github.arulan.Bridge.desktop',
  install_dir: datadir / 'applications',
)

install_data(
  'io.github.arulan.Bridge.gschema.xml',
  install_dir: datadir / 'glib-2.0' / 'schemas',
)

install_data(
  'io.github.arulan.Bridge.metainfo.xml',
  install_dir: datadir / 'metainfo',
)
